Fix button spacing in hackwinds open source jumbotron

--- a/static/Scripts/mpi.css
+++ b/static/Scripts/mpi.css
@@ -134,6 +134,10 @@ body {
     padding-top: 15px;
 }
 
+.hackwinds-github-button {
+    margin-bottom: 5px;
+}
+
 /**
  * Admin Page Styles
  */
